Contact Us Page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,14 +4,11 @@
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/ride_hub_logo_w"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyRideHub"
-        tools:targetApi="31">
+        android:theme="@style/Theme.MyRideHub">
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -21,13 +18,13 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ContactUsActivity"
+            android:exported="false" />
+        <activity
             android:name=".LoginActivity"
-            android:exported="true">
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".RegisterActivity"
-            android:exported="true">
-        </activity>
+            android:exported="false" />
     </application>
-
 </manifest>
