debug the backend of contact us and driver

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,3 +11,17 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Server port
 server.port=8080
+
+# Email server settings
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=myridehub.team@gmail.com
+spring.mail.password=P@ssw0rd!sECureD
+
+# Additional email properties
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.debug=true
+
+# Admin email (same as sending email)
+myridehub.admin.email=myridehub.team@gmail.com
