fixed some minor issues

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -25,3 +25,10 @@ spring.mail.properties.mail.debug=true
 
 # Admin email (same as sending email)
 myridehub.admin.email=myridehub.team@gmail.com
+
+spring.main.allow-bean-definition-overriding=true
+
+# JWT properties
+# 7 days in milliseconds
+app.jwtSecret=MySuperSecretKeyThatIsVerySecret12345
+app.jwtExpirationInMs=604800000
