connected the everthing related to the renting

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
         <activity android:name=".BookingDetailsActivity" android:exported="false" />
 
         <activity android:name=".PaymentActivity" android:exported="false" />
+        <activity android:name=".ViewBookingDetailsActivity" android:exported="false" />
 
     </application>
 </manifest>
