integrated the contact us page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,5 +52,7 @@
         <activity android:name=".PaymentActivity" android:exported="false" />
         <activity android:name=".ViewBookingDetailsActivity" android:exported="false" />
 
+        <activity android:name=".InquirySuccessActivity" android:exported="false" />
+
     </application>
 </manifest>
