--- a/frontend/myridehub/package.json
+++ b/frontend/myridehub/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.8.4",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.0"
+    "react-router-dom": "^7.5.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
