Fix JDBC URL formatting for Railway deployment

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database connection
-spring.datasource.url=jdbc:mysql://localhost:3306/dbmyridehub
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
 spring.datasource.username=root
-spring.datasource.password=yourpassword
+spring.datasource.password=hbMcZQOAjsTSpEEVVOeurFMVXiTOummp
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate settings
@@ -17,18 +17,14 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=myridehub.team@gmail.com
 spring.mail.password=P@ssw0rd!sECureD
-
-# Additional email properties
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.debug=true
 
-# Admin email (same as sending email)
+# App settings
 myridehub.admin.email=myridehub.team@gmail.com
-
 spring.main.allow-bean-definition-overriding=true
 
-# JWT properties
-# 7 days in milliseconds
+# JWT
 app.jwtSecret=MySuperSecretKeyThatIsVerySecret12345
 app.jwtExpirationInMs=604800000
