Force Hibernate to create schema - final deployment fix

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # =========================
 # JPA / Hibernate Settings
 # =========================
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
@@ -19,7 +19,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.port=8080
 
 # =========================
-# Email Settings (Optional, for your email sending feature)
+# Email Settings (Optional)
 # =========================
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
