Update application.properties for Railway MySQL deployment

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,42 +1,30 @@
-# =========================
-# Database Connection
-# =========================
-spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
-spring.datasource.username=root
-spring.datasource.password=hbMcZQOAjsTSpEEVVOeurFMVXiTOummp
+# ===============================
+# Server Configuration (for Railway)
+# ===============================
+server.port=${PORT:8080}  # Binds to Railway's assigned port
+
+# ===============================
+# MySQL Database Configuration
+# ===============================
+spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# =========================
-# JPA / Hibernate Settings
-# =========================
-spring.jpa.hibernate.ddl-auto=create
+# ===============================
+# JPA / Hibernate Configuration
+# ===============================
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# =========================
-# Server Settings
-# =========================
-server.port=8080
+# ===============================
+# Security & CORS (optional extras)
+# ===============================
+spring.mvc.cors.allowed-origins=*
+spring.mvc.cors.allowed-methods=*
 
-# =========================
-# Email Settings (Optional)
-# =========================
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=myridehub.team@gmail.com
-spring.mail.password=P@ssw0rd!sECureD
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.debug=true
-
-# =========================
-# Custom Application Settings
-# =========================
-myridehub.admin.email=myridehub.team@gmail.com
-spring.main.allow-bean-definition-overriding=true
-
-# =========================
-# JWT Token Settings
-# =========================
-app.jwtSecret=MySuperSecretKeyThatIsVerySecret12345
-app.jwtExpirationInMs=604800000
+# ===============================
+# (Optional) Logging
+# ===============================
+logging.level.org.springframework=INFO
