--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,41 +1,17 @@
-# ===============================
-# Server Configuration (for Railway)
-# ===============================
 server.port=${PORT:8080}
 
-# ===============================
-# MySQL Database Configuration
-# ===============================
 spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
 spring.datasource.username=root
 spring.datasource.password=hbMcZQOAjsTSpEEVVOeurFMVXiTOummp
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ===============================
-# Flyway Configuration (for managing schema)
-# ===============================
-spring.flyway.enabled=true
-spring.flyway.baseline-on-migrate=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Disable Hibernate auto-creation to avoid dropping or modifying tables automatically
 spring.jpa.hibernate.ddl-auto=none
 
-# ===============================
 # JPA / Hibernate Configuration
-# ===============================
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-# ===============================
-# CORS Configuration (optional)
-# ===============================
-spring.mvc.cors.allowed-origins=*
-spring.mvc.cors.allowed-methods=*
-
-# ===============================
-# Logging (optional)
-# ===============================
-logging.level.org.springframework=INFO
-
 app.jwtSecret=myridehub_super_secure_256bit_key_1234567890!
-app.jwtExpirationInMs=86400000  # 1 day in milliseconds
+app.jwtExpirationInMs=86400000
