--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,11 @@
-# Use Java 17 as base
-FROM openjdk:17-jdk-slim
-
-# Set working directory
+# Use Maven image to build the project
+FROM maven:3.9.4-eclipse-temurin-17 AS build
 WORKDIR /app
+COPY . .
+RUN mvn clean package -DskipTests
 
-# Copy built JAR from Maven target folder
-COPY target/*.jar app.jar
-
-# Run Spring Boot application
+# Use a lightweight Java image to run the app
+FROM openjdk:17-jdk-slim
+WORKDIR /app
+COPY --from=build /app/target/*.jar app.jar
 ENTRYPOINT ["java", "-jar", "app.jar"]
