--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,13 +1,22 @@
-server.port=${PORT:8080}
+# Server Configuration
+server.port=${PORT:10000} 
+
+# MySQL Database Configuration from Environment Variables
 spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
 spring.datasource.username=${MYSQLUSER}
 spring.datasource.password=${MYSQLPASSWORD}
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+# JWT (Authentication)
 app.jwtSecret=myridehub_super_secure_256bit_key_1234567890!
 app.jwtExpirationInMs=86400000
+
+# Email Configuration (optional, if you're using email services)
+spring.mail.username=${spring.mail.username}
+spring.mail.password=${spring.mail.password}
+myridehub.admin.email=${myridehub.admin.email}
